# blocstage-api

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
.sqlx/: query-0a4f457f02b04271c0cd7cea3888f4d331c0223089bb54390b38e0b9ceb7bb1e.json  query-21b45ed5aabc3f9e06688f9e418d5ce32b8cfe38440225b76b71809b6d1831d2.json  query-34535622c99606cbf0ef826387323b3b55d0fbe5efe8bcb706af0e8a6552d460.json  query-3c4f91dc15b4cebeaf80884ce5475800658a5ab3deacc2b79f68598a9618d3af.json  query-4065cd7961f7907c52c26540459b4c060b245fa2976275c0fb37ea798adae404.json  query-68949bce3bad88e066709353a90067fedf1bd441a513dcc77aef050b5fdbe7a1.json  query-6dda1fba996ffbd243d7a736c39632b1f384824d0dbe6c14a5820581167cee7c.json  query-770aac7f34afd561102a95e229af4c8544357f5be0df8b3c832a84ca6262c47a.json  query-aa8c2061241f8a16ad0df04e97966cc7ad133768dc04570a1de6e03d02d76057.json  query-b7963c57dac943525d5f4d269233389c4fa2f7e3da51e16a20efa76116ee6a27.json
migrations/: 20251007000000_add_profile_picture_to_users.sql  20260129000000_auth_changes.sql
src/: main.rs
src/controllers/: auth.rs  user.rs
src/models/: user.rs
src/services/: auth.rs
src/services/email/: mod.rs  templates.rs
