[package]
name = "blocstage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-governor = "0.8.0"
actix-rt = "2.10.0"
actix-web = "4.10.2"
actix-web-actors = "4.2"
anyhow = "1.0.98"
base64 = "0.22.1"
bcrypt = "0.17.0"
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
num_cpus = "1.16.0"
opentelemetry = "0.30.0"
pdf-canvas = "0.7.0"
printpdf = "0.8.2"
prometheus = "0.14.0"
qrcode = "0.14.1"
rand = { version = "0.9.1", features = ["std"] }
reqwest = { version = "0.12.15", features = ["json"] }
ring = "0.17.14"
rust_decimal = "1.37.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.19.0"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "uuid", "json", "runtime-tokio", "tls-native-tls", "runtime-tokio-native-tls", "bigdecimal", "macros"] }
stellar-strkey = "0.0.13"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.31.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
stellar-horizon = "0.7.1"
soroban-client = "0.4.8"
stellar-xdr = "22.2.0"
redis = { version = "0.32.4", features = ["aio", "tokio-comp", "connection-manager"] }
handlebars = "6.0"
deadpool-redis = "0.22.0"
async-trait = "0.1.88"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
image = "0.25.5"
postgrest = "1.6.0"
[dev-dependencies]
tokio-test = "0.4"
